--- a/minesweeper2/index.html
+++ b/minesweeper2/index.html
@@ -30,12 +30,10 @@
 
         <div class="game-board">
           <div
-            class="board"
+            class="board game-board"
             id="board"
-            role="game-board"
+            role="region"
             aria-label="扫雷游戏棋盘"
-            class="game-board"
-            style="border: 2px solid #e9ecef"
           ></div>
         </div>
 
